# aruco_description

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: generate_aruco.launch  load_aruco_description.launch  spawn_aruco.launch
meshes/: template.dae
rviz/: base_visualize.rviz
scripts/: generate_aruco_mesh.py
urdf/: general_aruco.urdf.xacro  general_aruco.xacro
